...
              ),
            ),
          ),
          Padding(
            padding: EdgeInsets.only(bottom: 30.0),
            child: Text(
              "Vamos começar?",
              textAlign: TextAlign.center,
              style: TextStyle(
                fontSize: 20.0,
                color: Theme.of(context).accentColor,
              ),
            ),
          ),
          OutlinedButton(
            key: const Key("startButton"),
            onPressed: () {
              Navigator.push(context,
                PageRouteBuilder(
                  pageBuilder: (context, animation, secondAnimation) => EToPage(),
                  transitionDuration: Duration(milliseconds: 400),
                  transitionsBuilder: (context, animation, secondAnimation, child) {
...
