...
                  fontWeight: FontWeight.bold,
                  fontSize: 18.0,
                ),
              ),
            ),
            OutlinedButton(
              key: const Key("finalResultButton"),
              onPressed: () {
                Navigator.of(context).pop();
              },
              child: Text(
                "Voltar à página inicial",
                style: TextStyle(
...
